# obagg

./: .dockerignore  Cargo.toml  Dockerfile  README.md
conf/: obagg.yaml
obagg/: Cargo.toml
obagg/proto/: orderbook.proto
obagg/src/: aggregator.rs  binance.rs  binance_orderbook_client.rs  bitstamp.rs  bitstamp_orderbook_client.rs  client.rs  config.rs  definitions.rs  error.rs  grpc.rs  lib.rs  orderbook-client.rs  serde.rs  server.rs  utils.rs
proto/: orderbook-aggregator.proto  orderbook.proto
scripts/: start.sh
src/: aggregated-orderbook-client.rs  client.rs  server.rs
