[package]
name = "keyrock-challenge"
authors = ["Jonathan Fulcher <furryboffin@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aggregated-orderbook-server"
path = "src/server.rs"

[[bin]]
name = "aggregated-orderbook-client"
path = "src/aggregated-orderbook-client.rs"

[[bin]]
name = "orderbook-client"
path = "src/orderbook-client.rs"

[dependencies]
tokio-stream = "0.1.9" 
tokio = { version = "1.20.1", features = [ "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.17", features = [ "native-tls" ] }
tonic = { version="0.8.0", features = ["tls"] }
prost = "0.11"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
# streaming example
h2 = "0.3"
url = "2.2"
[build-dependencies]
tonic-build = "0.8.0"
